# quickNginx

./: .gitignore  Readme.md  index.html  package-lock.json  package.json  vite.config.js
backup/src-tauri/: Cargo.toml  tauri.conf.json
backup/src-tauri/src/: main.rs
scripts/: generate_icon.js  generate_icon.py  generate_installer_icon.py  resize_icon.py
src/: App.vue  generateIcons.js  index.html  index.js  main.js  renderer.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
