[package]
name = "quicknginx-tauri"
version = "1.0.0"
description = "A Tauri App for managing Nginx"
authors = ["quickNginx Team"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

[features]
custom-protocol = ["tauri/custom-protocol"] 